atualização de nova cor no projeto

--- a/introducao.html
+++ b/introducao.html
@@ -20,12 +20,12 @@
     <select id="coresFundo" onchange="mudaCorFundo()">
         <option value="white">Branco</option>
         <option value="blue">Azul</option>
-        <option value="yellon">Amarelo</option>
+        <option value="yellow">Amarelo</option>
         <option value="red">Vermelho</option>
         <option value="pink">Rosa</option>
     </select>
 
-    <!-- para aárecer a função imprimir  -->
+    <!-- para aparecer a função imprimir  -->
     <button onclick="print()">Imprimir</button>
 
     <script src="/index.js"></script>
