--- a/introducao.html
+++ b/introducao.html
@@ -8,15 +8,37 @@
 </head>
 <body>
 
+    <style>
+        #x {
+            height: 940px;
+            background: lightblue;
+
+        }
+
+        #elem{
+            border-radius: 10px;
+        }
+    </style>
+
     <h1 id="t1">Introdução ao javascript</h1>
-    <h2 id="t2"></h2>
+    <!-- <h2 id="t2"></h2> -->
+
+
+    <p>Conversão de Km para milha</p>
+    <input type="text" id="valorKm" size="1" value="1" > KM
+    =<b><span id="resultado"> 1.609</span></b> Milha
+    <button type="button" id="botaoCalcular" onclick="calcularKmMilha()">Calcular</button>
+
+    <br>
+    <br>
+    <br>
    <!--  <form id="formulariologin" onsubmit="bemVindo(); return false;">
         <input type="text" id="nomeUsuario" placeholder="usuário" />
         <input type="password" placeholder="senha">
         <button type="submit">Entrar</button>
     </form> -->
 
-    <label for="Escolha uma cor de fundo:">Escolha uma cor de fundo:
+   <!--  <label for="Escolha uma cor de fundo:">Escolha uma cor de fundo:
     <select id="coresFundo" onchange="mudaCorFundo()">
         <option value="white">Branco</option>
         <option value="blue">Azul</option>
@@ -27,21 +49,32 @@
     </label>
     <br>
     <br>
-    <!-- para aparecer a função imprimir  -->
-    <button onclick="print()">Imprimir</button>
+    <!- para aparecer a função imprimir  -->
+    <!-- <button onclick="print()">Imprimir</button>
 
     <br>
-    <br>
+    <br> -->
 
     <!-- The text field -->
-    <input type="text" placeholder="digite seu texto" id="myInput">
+   <!--  <input type="text" placeholder="digite seu texto" id="myInput"> -->
 
     <!-- The button used to copy the text -->
-    <button onclick="myFunction()">Copy text</button>
+    
+<!-- <button onclick="myFunction()">Copy text</button>
+    <br>
+    <br>
 
-    <script src="/index.js"></script>
+    <div id='x'>
+        <button id='elem'>Click to scroll</button>
+      </div> -->
+
+    <!-- <script src="/index.js"></script> -->
     <!-- <script src="/script.js"></script> -->
-    <script src="/operadores.js"></script>
+    <!-- <script src="/operadores.js"></script> -->
+    <!-- <script src="/tiposdados.js"></script> -->
+    <!-- <script src="/funcao.js"></script> -->
+    <!-- <script src="/escopo.js"></script> -->
+    <script src="/objeto.js"></script>
 </body>
 </html>
 
