adicionar o dom.js

--- a/introducao.html
+++ b/introducao.html
@@ -18,6 +18,16 @@
         #elem{
             border-radius: 10px;
         }
+
+        body{
+            background: pink;
+            width: 100%;
+            text-align: center;
+        }
+
+        ul{
+            cursor: pointer;
+        }
     </style>
 
     <h1 id="t1">Introdução ao javascript</h1>
@@ -32,6 +42,23 @@
     <br>
     <br>
     <br>
+
+
+    <h2>Laços de Repetição - Loops
+    </h2>
+    <p>Operações Aritméticas: </p>
+    <ul id="listaOperacoes"></ul>
+    <br>
+
+    <h2><i>Document Object</i> (DOM)</h2><h2>Modelo por objeto</h2>
+    <p>Define:</p>
+    <ul id="lista">
+      <li>Os <b>elementos</b> HTML como <b>objetos</b></li><p></p> 
+      <li>As <b>propriedades</b> para acessar os elementos HTML</li><p></p>
+      <li>Os <b>eventos</b> dos elementos HTML</li>
+    </ul>
+
+
    <!--  <form id="formulariologin" onsubmit="bemVindo(); return false;">
         <input type="text" id="nomeUsuario" placeholder="usuário" />
         <input type="password" placeholder="senha">
@@ -74,7 +101,11 @@
     <!-- <script src="/tiposdados.js"></script> -->
     <!-- <script src="/funcao.js"></script> -->
     <!-- <script src="/escopo.js"></script> -->
-    <script src="/objeto.js"></script>
+    <!-- <script src="/objeto.js"></script> -->
+    <!-- <script src="/arrays.js"></script> -->
+    <!-- <script src="/condicionais.js"></script> -->
+    <!-- <script src="/laco.js"></script> -->
+    <script src="/dom.js"></script>
 </body>
 </html>
 
