atualização e criação de novas funções

--- a/introducao.html
+++ b/introducao.html
@@ -27,6 +27,7 @@
 
         ul{
             cursor: pointer;
+            color: rgb(201, 39, 39);
         }
     </style>
 
@@ -56,6 +57,7 @@
       <li>Os <b>elementos</b> HTML como <b>objetos</b></li><p></p> 
       <li>As <b>propriedades</b> para acessar os elementos HTML</li><p></p>
       <li>Os <b>eventos</b> dos elementos HTML</li>
+      <button>Limpar</button>
     </ul>
 
 
